<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/overflow_menu"
            android:title=""
            android:orderInCategory="1111"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_menu_more">

            <menu>
                    <item
                        android:id="@+id/action_full_inf"
                        android:orderInCategory="100"
                        android:title="@string/full_inf"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/action_contacts"
                        android:orderInCategory="100"
                        android:title="@string/contacts"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/action_about"
                        android:orderInCategory="100"
                        android:title="@string/abouts"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/action_exit"
                        android:orderInCategory="100"
                        android:title="@string/exit"
                        app:showAsAction="never"/>

            </menu>
        </item>
</menu>