<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/toptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:paddingTop="6dp"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/editText"
                android:hint="@string/enter_vin"
                android:background="@drawable/textfone"
                android:textAlignment="center"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp">

            <Button
                android:layout_width="215dp"
                android:id="@+id/buttonCheck"
                android:text="@string/check"
                android:background="@drawable/b_put"
                android:layout_height="60dp"
                tools:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:progress="@android:integer/config_mediumAnimTime"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar"/>
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>